--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body 
+
   <div class="header"> welkom 
   </div>
   <div class="main">
     <div id="logs" class="logs">infos</div>
-    <div id="chessBoard" class="chess-board">chessBoard</div>
+    <div id="chessBoard" class="chess-board"></div>
     <div id="player" class="player">player .</div>
+     <script src="logic.js"></script>
   </div>
 
-  <script src="logic.js"></script>
+ 
 </body>
 <footer> chezz.com al right reserved</footer>
 </html>
