use of regex for filtering characters

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="chessBoard" class="chess-board"></div>
     <div id="player" class="player">player .</div>
      <script src="logic.js"></script>
+     <script src="pieces.js"></script>
   </div>
 
  
